--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" integrity="sha256-9vPVPdIkAmHxV2la3zhqXAgBQpjBn2LM9jzRYploktA=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" integrity="sha256-9vPVPdIkAmHxV2la3zhqXAgBQpjBn2LM9jzRYploktA="
+        crossorigin="anonymous" />
     <script src="js/modernizr.custom.79639.js"></script>
 </head>
 
@@ -162,28 +163,72 @@
                 <div class="col-md-12 about__block">
                     <div class="heading__block">
                         <h2 class="text-center section__heading">O nama</h2>
-                        <p class="text-center">Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo se u
-                            Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada.</p>
-                        <p class="text-center">Iza sebe imamo bogato kinološko iskustvo u uzgoju pasa jos iz davnih 90-ih godina, da bi se 2008.
-                            godine odlučili za rasu Cane Corso I 2010. godine je zvanično registrovali i tada počinje priča
-                            o našoj odgajivačnici što dokazuju naši rezultati i uspesi pasa iz našeg uzgoja svuda po svetu.</p>
-                        <p class="text-center">Uspešno sarađujemo sa ostalim odgajivačima kao i sa našim partnerom PROTECTION DOG WORLDWIDE, koja
-                            se bavi obukom pasa za zaštitu i čuvanje lica i objekata iz Velike Britanije koja nam je ukazala
-                            poverenje i imala uspeha sa mnogim našim psima.</p>
-                        <p class="text-center">Naša odgajivačnica nije samo posao, to je ljubav koju prenosimo na svoju decu.</p>
-                        <div class="modal__block">
-                            <button type="button" data-toggle="modal" data-target="#standard">
-                                Standard
-                            </button>
-                        </div>
-                        <div class="modal fade" id="standard" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-lg" role="document">
-                                <div class="modal-content">
-
-                                    <div class="modal-body">
-                                        test
-                                    </div>
-
+                    </div>
+                    <p class="text-center">Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo se u Srbiji,
+                        Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada.</p>
+                    <p class="text-center">Iza sebe imamo bogato kinološko iskustvo u uzgoju pasa jos iz davnih 90-ih godina, da bi se 2008. godine
+                        odlučili za rasu Cane Corso I 2010. godine je zvanično registrovali i tada počinje priča o našoj
+                        odgajivačnici što dokazuju naši rezultati i uspesi pasa iz našeg uzgoja svuda po svetu.</p>
+                    <p class="text-center">Uspešno sarađujemo sa ostalim odgajivačima kao i sa našim partnerom PROTECTION DOG WORLDWIDE, koja se
+                        bavi obukom pasa za zaštitu i čuvanje lica i objekata iz Velike Britanije koja nam je ukazala poverenje
+                        i imala uspeha sa mnogim našim psima.</p>
+                    <p class="text-center">Naša odgajivačnica nije samo posao, to je ljubav koju prenosimo na svoju decu.</p>
+                    <div class="modal__block">
+                        <button type="button" data-toggle="modal" data-target="#standard">
+                            Standard
+                        </button>
+                    </div>
+                    <div class="modal standard fade" id="standard" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <h3>Standard</h3>
+                                    <p>
+                                        Srednje-veliki molos, jednobojan, compaktan, snažnog skeleta, mišićav i atletski građen, kreće se sa primetnom lakoćom. Glava
+                                        je masivna, dostojanstvenog i ponosnog izraza. Selekcija se odvijala paralelno sa
+                                        (napuljskim) mastifom, ali potiče od lakših predaka ali je zadržao originalni oblik.
+                                        Oduvek je bio čuvar imanja i lovac na opasnu divljač, kao što je divlja svinja. Potiče
+                                        iz centralnih i južnih delova Italije gde je korišćen kao gonič stoke za krave i
+                                        svinje koje su odgajane u divljini. Takođe je čuvao putnike i kočije od drumskih
+                                        razbojnika. Ime je ono po kojem je oduvek bio poznat na jugu, ima isti koren kao
+                                        “corsiero” (courser) srednjevekovni ratni konj; možda je ime izvedeno iz latinskog
+                                        “cohors” (cortyard/dvorište, bodyguard/čuvar, telohranitelj). Zbog promena u okruženju,
+                                        Courser je bio blizu istrebljenja. Nekoliko entuzijasta je iniciralo njegovo ponovno
+                                        oživljavanje koje je danas završeno. Moderni zadaci rase su čuvanje, odbrana ljudi
+                                        i njihovog vlasništva. Prilagodljiv i hrabar radnik, poslovično odan, na oprezu i
+                                        spreman da reaguje, u stanju da podnese teške uslove i situacije zahvaljujući svojoj
+                                        uravnoteženosti. Jake građe, ali ne bez elegancije. Pravougaonog profila, nikako
+                                        ne sme podsećati na Napuljskog Mastifa. Koža mu je uz telo i ne formira nabore.
+                                    </p>
+                                    <h4>Kratak istorijat</h4>
+                                    <p>
+                                        Njegov direktni predak je Canis Pugnax (stari rimski molos), od kojeg je lakša verzija korišćena za lov velikih divljih životinja
+                                        i kao pojačanje u bitkama. Godinama je bio vredni pratilac naroda u Italiji. Bio
+                                        je korišćen kao čuvar imanja, stoke, lični zaštitnik i lovac. U prošlosti je ova
+                                        rasa bila zastupljena širom Italije o čemu svedoči brojna ikonografija i istoriografija.
+                                        U skorijoj prošlosti posebno je očuvan u oblastima Južne Italije, naročito Puglia,
+                                        Lucania i Sannio. Ime mu je izvedeno iz latinskog “Cohors” što znači “Čuvar”, “Zaštitnik”.
+                                    </p>
+                                    <h4>Opšti izgled</h4>
+                                    <p>Srednje velik pas, jake građe ali elegantan, dugih i moćnih mišića, veoma izraženih,
+                                        odaje snagu, agilnost i izdržljivost. Opšti oblik je mezomorfan - takav da je dužina
+                                        veća nego visina u grebenu, harmoničan u smislu oblika i neharmoničan u smislu profila.</p>
+                                    <h4>Važne proporcije</h4>
+                                    <p>Dužina tela je oko 11% veća od visine u grebenu. Ukupna dužina glave dostiže 36% visine
+                                        u grebenu. Dužina njuške je 34% od dužine glave. Visina grudnog koša je 50% visine
+                                        u grebenu i jednaka je visini laktova.</p>
+                                    <h4>Ponašanje i temperament</h4>
+                                    <p>Inteligentan, aktivan i uravnotežen, čuvar i zaštitnik bez konkurencije. Spreman da uči
+                                        i vezan za vlasinka, voli decu i porodicu. Ukoliko je neophodno, postaje hrabri zaštitnik
+                                        ljudi, kuće i imovine. Lako se obučava.</p>
+                                    <h4>Glava</h4>
+                                    <p>Brahicefalna (Brachycephalic) tj. široka i kratka. Ukupna dužina dostiže 36% visine u
+                                        grebenu. Bizigomatska širina (Bizygomatic) tj. širina glave u visini jagodičnih kostiju,
+                                        koja je jednaka dužini lobanje, predstavlja više od polovine ukupne visine glave
+                                        i dostiže 66%. Gornje linije lobanje i njuške su blago konvergentne. Obim glave,
+                                        meren u visini jagodičnih kostiju je više nego dvostruko veći od dužine glave, čak
+                                        i kod ženki. Glava je blago oblikovana jagodičnim lukovima izbačenim napolje. Koža
+                                        je jaka i pričvršćena za tkiva ispod, mekana i zategnuta.</p>
                                 </div>
                             </div>
                         </div>
@@ -225,19 +270,22 @@
                         <div class="grid">
                             <div class="grid-sizer"></div>
                             <div class="grid-item element-item transition male" data-category="male">
-                                <a href="./img/gallery/male/Donald Empire Of Wisdom/thumb/384038_285205881528211_1446679041_n.jpg" data-fancybox="gallery" data-caption="Caption for single image">
+                                <a href="./img/gallery/male/Donald Empire Of Wisdom/thumb/384038_285205881528211_1446679041_n.jpg" data-fancybox="gallery"
+                                    data-caption="Caption for single image">
                                     <img src="./img/gallery/male/Donald Empire Of Wisdom/thumb/384038_285205881528211_1446679041_n.jpg" />
                                 </a>
                                 <div class="d-none">
-                                        <a href="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" data-fancybox="gallery" data-caption="Caption #2">
-                                            <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
-                                        </a>
+                                    <a href="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" data-fancybox="gallery"
+                                        data-caption="Caption #2">
+                                        <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
+                                    </a>
                                 </div>
-                                </div>
+                            </div>
                             <div class="grid-item element-item transition male test">
-                                    <a href="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" data-fancybox="gallery" data-caption="Caption #2">
-                                            <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
-                                        </a>
+                                <a href="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" data-fancybox="gallery"
+                                    data-caption="Caption #2">
+                                    <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
+                                </a>
                             </div>
                             <div class="grid-item element-item transition female">
                                 <img src="./img/gallery/male/IrmatasBarrakuda/thumb/IMG_E4390.JPG" />
@@ -314,9 +362,9 @@
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center">
                     <div class="friend__block" data-toggle="modal" data-target="#transport">
-                            <div class="overlay">
-                                    <h5>Transport pasa Boban Janković</h5>
-                                </div>
+                        <div class="overlay">
+                            <h5>Transport pasa Boban Janković</h5>
+                        </div>
                         <img src="./img/bj.PNG" alt="">
                     </div>
                     <div class="modal fade" id="transport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -336,9 +384,9 @@
                 </div>
                 <div class="col-sm-3 col-xs-12 text-center">
                     <div class="friend__block" data-toggle="modal" data-target="#dresura">
-                            <div class="overlay">
-                                    <h5>Dresura pasa Boško Ivkov</h5>
-                                </div>
+                        <div class="overlay">
+                            <h5>Dresura pasa Boško Ivkov</h5>
+                        </div>
                         <img src="./img/bi.png" alt="">
                     </div>
                     <div class="modal fade" id="dresura" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -350,7 +398,9 @@
                                     <ul>
                                         <li>Licencirani WUSV markirant 2003-2005</li>
                                         <li>Državni šampion IPO 3 trag 2013</li>
-                                        <li>Trener jedinog nemačkog ovčara koji ima plasman na WUSV svetskom šampionatu iz Srbije ikada</li>
+                                        <li>Trener jedinog nemačkog ovčara koji ima plasman na WUSV svetskom šampionatu iz Srbije
+                                            ikada
+                                        </li>
                                         <li>Trener pasa koji su se takmičili na FCI IPO FMBB WUSV</li>
                                         <li>Markirant na mnogobrojnim ZTP , Kerung i IPO manifestacijama</li>
                                         <li>Trener sportskih pasa više od 20 godina</li>
@@ -397,10 +447,6 @@
                                     <label>Vaša poruka</label>
                                     <span class="focus-border"></span>
                                 </div>
-                                <!-- <input id="name__input" class="form__input" type="text" name="name" autocomplete="off" placeholder="Ime"> -->
-                                <!-- <input id="email__input" class="form__input" name="email" type="text" autocomplete="off" placeholder="Email"> -->
-                                <!-- <input id="phone__input" class="form__input" type="text" name="phone" placeholder="Phone"> -->
-                                <!-- <textarea id="text__input" class="form__input" name="message" autocomplete="off" rows="8" placeholder="Vaša poruka"></textarea> -->
                                 <div class="button__block">
                                     <input class="ccbtn" type="submit" value="POŠALJI" id="submit__button">
                                 </div>
@@ -443,7 +489,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js" integrity="sha256-Tb4gdeCN/ACKmhKQ3BSfbuNgIVYQzBlEvbYlwK7juDw=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js" integrity="sha256-Tb4gdeCN/ACKmhKQ3BSfbuNgIVYQzBlEvbYlwK7juDw="
+        crossorigin="anonymous"></script>
     <script src="./webpack/jsFiles/test.js"></script>
     <script src="js/bundle.js"></script>
     <script src="js/jquery.ba-cond.min.js"></script>
