--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                     data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-2"></div>
-                        <h2>Empire of wisdom</h2>
+                        <!-- <h2>Empire of wisdom</h2>
                         <blockquote>
                             <p>Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo
                                 se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada</p>
-                        </blockquote>
+                        </blockquote> -->
                     </div>
                 </div>
 
@@ -182,112 +182,7 @@
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-body">
-                                    <h3>Standard</h3>
-                                    <p>
-                                        Srednje-veliki molos, jednobojan, compaktan, snažnog skeleta, mišićav i atletski građen, kreće se sa primetnom lakoćom. Glava
-                                        je masivna, dostojanstvenog i ponosnog izraza. Selekcija se odvijala paralelno sa
-                                        (napuljskim) mastifom, ali potiče od lakših predaka ali je zadržao originalni oblik.
-                                        Oduvek je bio čuvar imanja i lovac na opasnu divljač, kao što je divlja svinja. Potiče
-                                        iz centralnih i južnih delova Italije gde je korišćen kao gonič stoke za krave i
-                                        svinje koje su odgajane u divljini. Takođe je čuvao putnike i kočije od drumskih
-                                        razbojnika. Ime je ono po kojem je oduvek bio poznat na jugu, ima isti koren kao
-                                        “corsiero” (courser) srednjevekovni ratni konj; možda je ime izvedeno iz latinskog
-                                        “cohors” (cortyard/dvorište, bodyguard/čuvar, telohranitelj). Zbog promena u okruženju,
-                                        Courser je bio blizu istrebljenja. Nekoliko entuzijasta je iniciralo njegovo ponovno
-                                        oživljavanje koje je danas završeno. Moderni zadaci rase su čuvanje, odbrana ljudi
-                                        i njihovog vlasništva. Prilagodljiv i hrabar radnik, poslovično odan, na oprezu i
-                                        spreman da reaguje, u stanju da podnese teške uslove i situacije zahvaljujući svojoj
-                                        uravnoteženosti. Jake građe, ali ne bez elegancije. Pravougaonog profila, nikako
-                                        ne sme podsećati na Napuljskog Mastifa. Koža mu je uz telo i ne formira nabore.
-                                    </p>
-                                    <h4>Kratak istorijat</h4>
-                                    <p>
-                                        Njegov direktni predak je Canis Pugnax (stari rimski molos), od kojeg je lakša verzija korišćena za lov velikih divljih životinja
-                                        i kao pojačanje u bitkama. Godinama je bio vredni pratilac naroda u Italiji. Bio
-                                        je korišćen kao čuvar imanja, stoke, lični zaštitnik i lovac. U prošlosti je ova
-                                        rasa bila zastupljena širom Italije o čemu svedoči brojna ikonografija i istoriografija.
-                                        U skorijoj prošlosti posebno je očuvan u oblastima Južne Italije, naročito Puglia,
-                                        Lucania i Sannio. Ime mu je izvedeno iz latinskog “Cohors” što znači “Čuvar”, “Zaštitnik”.
-                                    </p>
-                                    <h4>Opšti izgled</h4>
-                                    <p>Srednje velik pas, jake građe ali elegantan, dugih i moćnih mišića, veoma izraženih,
-                                        odaje snagu, agilnost i izdržljivost. Opšti oblik je mezomorfan - takav da je dužina
-                                        veća nego visina u grebenu, harmoničan u smislu oblika i neharmoničan u smislu profila.</p>
-                                    <h4>Važne proporcije</h4>
-                                    <p>Dužina tela je oko 11% veća od visine u grebenu. Ukupna dužina glave dostiže 36% visine
-                                        u grebenu. Dužina njuške je 34% od dužine glave. Visina grudnog koša je 50% visine
-                                        u grebenu i jednaka je visini laktova.</p>
-                                    <h4>Ponašanje i temperament</h4>
-                                    <p>Inteligentan, aktivan i uravnotežen, čuvar i zaštitnik bez konkurencije. Spreman da uči
-                                        i vezan za vlasinka, voli decu i porodicu. Ukoliko je neophodno, postaje hrabri zaštitnik
-                                        ljudi, kuće i imovine. Lako se obučava.</p>
-                                    <h4>Glava</h4>
-                                    <p>Brahicefalna (Brachycephalic) tj. široka i kratka. Ukupna dužina dostiže 36% visine u
-                                        grebenu. Bizigomatska širina (Bizygomatic) tj. širina glave u visini jagodičnih kostiju,
-                                        koja je jednaka dužini lobanje, predstavlja više od polovine ukupne visine glave
-                                        i dostiže 66%. Gornje linije lobanje i njuške su blago konvergentne. Obim glave,
-                                        meren u visini jagodičnih kostiju je više nego dvostruko veći od dužine glave, čak
-                                        i kod ženki. Glava je blago oblikovana jagodičnim lukovima izbačenim napolje. Koža
-                                        je jaka i pričvršćena za tkiva ispod, mekana i zategnuta.</p>
-                                    <h4 class="subheading">Lobanjski deo</h4>
-                                    <h4>Lobanja</h4>
-                                    <p>Gledano frontalno izgleda široko i blago zakrivljeno, gledano sa strane čini nepravilnu
-                                        krivu koja, naglašena u podregionu čela, postaje ravna duž sagitalnog lobanjskog
-                                        grebena (prim.prev.) (sagittal crest, koštana izraslina koja se pruža duž srednje
-                                        linije lobanje, sa gornje strane). Gledano odozgo, izgleda kvadratično zbog pružanja
-                                        jagodičnih lukova i moćnih mišića koji ih obuhvataju. Prednji, frontalni sinusi dobro
-                                        razvijeni i pruženi napred, dubok naglašen stop i vidljiva središnja brazda. Ocipitalni
-                                        (potiljačni) greben slabije razvijen. Očna udubljenja blago naglašena.</p>
-                                    <h4>Stop</h4>
-                                    <p>Vrlo naglašen zbog veoma razvijenih i ispupčenih frontalnih sinusa i istaknutih arkada.</p>
-                                    <h4>Nos</h4>
-                                    <p>U istoj liniji kao i nosnik. Gledan sa strane, ne sme prelaziti prednju vertikalnu liniju
-                                        usana svojim prednjim krajem, već mora biti na istoj vertikalnoj liniji kao i prednji
-                                        deo njuške. Mora da bude širok i obiman, ravan na vrhu, sa širokim nozdrvama, otvorenim
-                                        i pokretnim, mokar i hladan. Pigmentacija je crna.</p>
-                                    <h4>Njuška</h4>
-                                    <p>Veoma široka i duboka. Dubina njuške mora biti skoro jednaka dužini, koja dostiže 34%
-                                        ukupne dužine glave. Dubina njuške je više od 50% od dužine. Obzirom na paralelizam
-                                        leve i desne strane njuške kao i na punoću i širinu cele vilice, prednja strana njuške
-                                        je ravna i kvadratična. Nosnik ima pravolinijski profil i ravan je. Donja strana
-                                        profila njuške je određena gornjim usnama, suborbitalna regina pokazuje vrlo malo
-                                        udubljenje.
-                                    </p>
-                                    <h4>Usne</h4>
-                                    <p>Prilično čvrste. Gledane sa prednje strane, gornje usne na mestu razdvajanja formiraju
-                                        naopako “U” i, gledane sa strane vise umereno. Spoj je odmah vidljiv i uvek predstavlja
-                                        najnižu tačku donje strane profila njuške. Pigmentacija je crna.</p>
-                                    <h4>Obrazi</h4>
-                                    <p>Oblast viličnog mišića ispunjena i naglašena, ali ne prenaglašena.</p>
-                                    <h4>Zubi</h4>
-                                    <p>Beli, veliki i kompletni po rastu i broju. Donji sekutići prelaze samo neznatno (oko
-                                        5 mm) sekutiće gornje vilice, tako da se formira blagi predgriz.</p>
-                                    <h4>Oči</h4>
-                                    <p>Srednje veličine poređene sa veličinom psa, sub-frontalno (unutrašnji spoj kapaka je,
-                                        posmatrano s fronta, postavljen niže od spoljnog spoja - prim. prev.) i dobro postavljene.
-                                        Oči ovalne, spojeni kapci sa ivicama crne pigmentacije, beonjača ne sme biti vidljiva.
-                                        Treći kapak dobro pigmentisan. Dužica što tamnija, prema boji dlake. Pogled inteligentan
-                                        i oprezan.</p>
-                                    <h4>Uši</h4>
-                                    <p>Srednje veličine u odnosu na veličinu glave i veličinu psa; prekrivene kratkom dlakom,
-                                        trouglastog oblika, sa šiljastim vrhom i sačinjene od debele hrskavice, visoko postavljene,
-                                        znatno iznad jagodičnog luka, široke u dnu. Kada vise, priljubljene su uz obraze
-                                        ne silazeći ka vratu. Prilično raširene i blago naglašene na spoju, postaju polu-podignute
-                                        kada je pas na oprezu.Obično se seku u obliku jednakostraničnog trougla.</p>
-                                    <h4 class="subheading">Vrat</h4>
-                                    <h4>Gornja linija</h4>
-                                    <p>Blago zakrivljena</p>
-                                    <h4>Dužina</h4>
-                                    <p>Dužina iznosi 36% visine u grebenu, jednaka ukupnoj dužini glave.</p>
-                                    <h4>Oblik</h4>
-                                    <p>Ovalnog preseka, vrlo mišićav, sa naglašenim sastavom na potiljku. Obim, na sredini vrata,
-                                        je oko 80% visine u grebenu. Harmonično spojen sa grebenom, ramenima i grudima, vrat
-                                        stvara idealni ugao od 45Â° sa podlogom i prav ugao sa ramenom.</p>
-                                    <h4>Koža</h4>
-                                    <p>Donja strana vrata je praktično bez viška kože.</p>
-                                    <h4>Telo</h4>
-                                    <p>Kompaktno, jako i veoma mišićavo. Dužina je 11% veća od visine i grebenu, sa odstupanjem
-                                        od Â±1%.</p>
+                                   
                                 </div>
                             </div>
                         </div>
@@ -300,11 +195,11 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="heading__block">
-                            <h2 class="section__heading text-right">Pansion za pse</h2>
+                            <h2 class="section__heading">Pansion za pse</h2>
                         </div>
 
                     </div>
-                    <div class="col-md-6 pull-right">
+                    <div class="col-md-12">
                         <p class="text-justify">U sklopu odgajivačnice nalazi se i pansion za pse. U pansionu se nalazi 15 spoljnih i komfornih boksova
                             i 15 unutašnjih boksova. Spoljni boksovi su natkriveni sa termo-izolovanim kućicama i pokriveni
                             video nadzorom. Prostor sa unutrasnjim boksovima je klimatizovan i pokriven video nadzorom. Dežurni
