fixed slider images and background on mobile

--- a/index.html
+++ b/index.html
@@ -115,11 +115,10 @@
                     data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-2"></div>
-                        <!-- <h2>Empire of wisdom</h2>
+                        <h2>Empire of wisdom</h2>
                         <blockquote>
-                            <p>Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo
-                                se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada</p>
-                        </blockquote> -->
+                            <p>Mi smo odgajivačnica Cane Corso rase pasa iz Nove Pazove</p>
+                        </blockquote>
                     </div>
                 </div>
 
@@ -127,13 +126,13 @@
                     data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-4"></div>
-                        <h2>Naša priča</h2>
+                        <!-- <h2>Naša priča</h2>
                         <blockquote>
                             <p>Iza sebe imamo bogato kinološko iskustvo u uzgoju pasa jos iz davnih 90-ih godina, da bi se 2008.
                                 godine odlučili za rasu Cane Corso i 2010. godine je zvanično registrovali i tada počinje
                                 priča o našoj odgajivačnici što dokazuju naši rezultati i uspesi pasa iz našeg uzgoja svuda
                                 po svetu</p>
-                        </blockquote>
+                        </blockquote> -->
                     </div>
                 </div>
 
@@ -141,10 +140,10 @@
                     data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-3"></div>
-                        <h2>Psi su deo našeg života</h2>
+                        <!-- <h2>Psi su deo našeg života</h2>
                         <blockquote>
                             <p>Naša odgajivačnica nije samo posao, to je ljubav koju prenosimo na svoju decu</p>
-                        </blockquote>
+                        </blockquote> -->
                     </div>
                 </div>
             </div>
