--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css"
         integrity="sha256-9vPVPdIkAmHxV2la3zhqXAgBQpjBn2LM9jzRYploktA=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <script src="js/modernizr.custom.79639.js"></script>
 </head>
 
@@ -128,17 +130,9 @@
                     </div>
                 </div>
 
-                <div class="sl-slide" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10"
-                    data-slice1-scale="2" data-slice2-scale="1">
-                    <div class="sl-slide-inner">
-                        <div class="bg-img bg-img-5"></div>
-                    </div>
-                </div>
-
             </div>
             <nav id="nav-dots" class="nav-dots">
                 <span class="nav-dot-current"></span>
-                <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
@@ -169,9 +163,10 @@
                     <p class="text-center">Naša odgajivačnica nije samo posao, to je ljubav koju prenosimo na svoju
                         decu.</p>
                     <div class="modal__block">
-                        <button type="button" data-toggle="modal" data-target="#standard">
+                        <a href="#0" class="button-shiny" data-toggle="modal" data-target="#standard">Najava legla!</a>
+                        <!-- <button type="button" data-toggle="modal" data-target="#standard">
                             Standard
-                        </button>
+                        </button> -->
                     </div>
                     <div class="modal standard fade" id="standard" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                         aria-hidden="true">
@@ -196,7 +191,7 @@
 
                     </div>
                     <div class="col-md-12">
-                        <p class="text-justify">U sklopu odgajivačnice nalazi se i pansion za pse. U pansionu se nalazi
+                        <p>U sklopu odgajivačnice nalazi se i pansion za pse. U pansionu se nalazi
                             15 spoljnih i komfornih boksova
                             i 15 unutašnjih boksova. Spoljni boksovi su natkriveni sa termo-izolovanim kućicama i
                             pokriveni
@@ -738,6 +733,9 @@
                         aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
+                                <div class="modal-header text-right">
+                                    <a href="#0" type="button" class="close" data-dismiss="modal"><i class="far fa-window-close"></i></a>
+                                </div>
                                 <div class="modal-body">
                                     <img src="./img/bj.PNG" alt="">
                                     <h3>Transport pasa Boban Janković</h3>
@@ -761,6 +759,9 @@
                         aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
+                                <div class="modal-header text-right">
+                                    <a href="#0" type="button" class="close" data-dismiss="modal"><i class="far fa-window-close"></i></a>
+                                </div>
                                 <div class="modal-body">
                                     <img src="./img/bi.png" alt="">
                                     <h3>Dresura pasa sa Boškom Ivkov</h3>
@@ -792,12 +793,12 @@
             <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
                 height="450" scrolling="no" frameborder="0" style="border:0" allowfullscreen></iframe>
         </section>
-        <section class="contact__block">
+        <section class="contact__block" id="contact__block">
             <div class="container">
                 <!--      FORM      -->
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="heading__block" id="contact__block">
+                        <div class="heading__block">
                             <h2 class="section__heading">Kontaktirajte nas</h2>
                         </div>
                         <div class="form">
