fixed images in gallery and added close button

--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css"
         integrity="sha256-9vPVPdIkAmHxV2la3zhqXAgBQpjBn2LM9jzRYploktA=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
     <script src="js/modernizr.custom.79639.js"></script>
 </head>
 
@@ -223,6 +221,7 @@
                                     data-fancybox="donald-empire-of-wisdom" data-caption="Donald empire of wisdom">
                                     <img src="./img/gallery/male/Donald Empire Of Wisdom/thumb/384038_285205881528211_1446679041_n.jpg" />
                                 </a>
+                                <span class="image-caption">Donald Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="donald-empire-of-wisdom"
                                         data-caption="Donald empire of wisdom">
@@ -243,6 +242,7 @@
                                     data-fancybox="hulio-empire-of-wisdom" data-caption="Hulio empire of wisdom">
                                     <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
                                 </a>
+                                <span class="image-caption">Hulio Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/male/Hulio Empire Of Wisdom/14797499_1118601128188678_1367175639_n.jpg"
                                         data-fancybox="hulio-empire-of-wisdom" data-caption="Hulio empire of wisdom">
@@ -260,6 +260,7 @@
                                     data-caption="Remus Custodi nos">
                                     <img src="./img/gallery/male/Remus Custodi nos/thumb/DSCN0954.JPG" />
                                 </a>
+                                <span class="image-caption">Remus Custodi nos</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/male/Remus Custodi nos/remus (1).JPG" data-fancybox="remus-empire-of-wisdom"
                                         data-caption="Remus Custodi nos">
@@ -288,19 +289,20 @@
                                 </div>
                             </div>
                             <div class="grid-item element-item transition female">
-                                <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00003.jpg" data-fancybox="anya-empire-of-wisdom"
-                                    data-caption="Anya empire of wisdom">
+                                <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00003.jpg" data-fancybox="anja-empire-of-wisdom"
+                                    data-caption="Anja empire of wisdom">
                                     <img src="./img/gallery/female/Anja Empire Of Wisdom/thumb/Image00003.jpg" />
                                 </a>
+                                <span class="image-caption">Anja Empire of Wisdom</span>
                                 <div class="d-none">
-                                    <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00001.jpg" data-fancybox="anya-empire-of-wisdom"
-                                        data-caption="Anya empire of wisdom">
+                                    <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00001.jpg" data-fancybox="anja-empire-of-wisdom"
+                                        data-caption="Anja empire of wisdom">
                                     </a>
-                                    <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00002.jpg" data-fancybox="anya-empire-of-wisdom"
-                                        data-caption="Anya empire of wisdom">
+                                    <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00002.jpg" data-fancybox="anja-empire-of-wisdom"
+                                        data-caption="Anja empire of wisdom">
                                     </a>
-                                    <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00004.jpg" data-fancybox="anya-empire-of-wisdom"
-                                        data-caption="Anya empire of wisdom">
+                                    <a href="./img/gallery/female/Anja Empire Of Wisdom/Image00004.jpg" data-fancybox="anja-empire-of-wisdom"
+                                        data-caption="Anja empire of wisdom">
                                     </a>
                                 </div>
                             </div>
@@ -309,6 +311,7 @@
                                     data-fancybox="eudora-empire-of-wisdom" data-caption="Eudora empire of wisdom">
                                     <img src="./img/gallery/female/Eudora i Noa Hana/thumb/Eudora Empire Of Wisdom.jpg" />
                                 </a>
+                                <span class="image-caption">Eudora i Noa Hana</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Eudora i Noa Hana/Noa Empire Of Wisdom.jpg"
                                         data-fancybox="eudora-empire-of-wisdom" data-caption="Noa empire of wisdom">
@@ -320,6 +323,7 @@
                                     data-caption="Euphoria empire of wisdom">
                                     <img src="./img/gallery/female/Euphoria Empire Of Wisdom/thumb/Image00002.jpg" />
                                 </a>
+                                <span class="image-caption">Euphoria Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Euphoria Empire Of Wisdom/Image00001.jpg"
                                         data-fancybox="euphoria-empire-of-wisdom" data-caption="Euphoria empire of wisdom">
@@ -334,6 +338,7 @@
                                     data-caption="Irmatas Barracuda">
                                     <img src="./img/gallery/female/Iramatas Barracuda/thumb/Image00004.jpg" />
                                 </a>
+                                <span class="image-caption">Irmatas Barracuda</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Iramatas Barracuda/Image00001.jpg" data-fancybox="irmatas-barracuda"
                                         data-caption="Irmatas Barracuda">
@@ -372,6 +377,7 @@
                                     data-caption="Zvezda Adriatiki Winter">
                                     <img src="./img/gallery/female/Zvezda Adriatiki Winter/thumb/IMG_3730.JPG" />
                                 </a>
+                                <span class="image-caption">Zvezda Adriatiki Winter</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Zvezda Adriatiki Winter/IMG_3731.JPG" data-fancybox="zvezda-adriatiki-winter"
                                         data-caption="Zvezda Adriatiki Winter">
@@ -392,6 +398,7 @@
                                     data-caption="Go and win for Afina">
                                     <img src="./img/gallery/female/GoAndWinForAfina/thumb/IMG_E4906.JPG" />
                                 </a>
+                                <span class="image-caption">Go and win for Afina</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/GoAndWinForAfina/afina1.jpg" data-fancybox="go-and-win-for-afina"
                                         data-caption="Go and win for Afina">
@@ -436,6 +443,7 @@
                                     data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba for Empire of Wisdom">
                                     <img src="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/thumb/irmatasBlackMamba(2).JPG" />
                                 </a>
+                                <span class="image-caption">Irmatas Black Mamba for Empire of Wisdom</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatasBlackMamba(1).JPG"
                                         data-fancybox="irmatas-black-mamba-for-empire-of-wisdom" data-caption="Irmatas Black Mamba for Empire of Wisdom">
@@ -452,6 +460,7 @@
                                 <a href="./img/gallery/kennel/Image00038.jpg" data-fancybox="kennel" data-caption="Štenci">
                                     <img src="./img/gallery/kennel/thumb/Image00038.jpg" />
                                 </a>
+                                <span class="image-caption">Štenci</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/kennel/Image00001.jpg" data-fancybox="kennel" data-caption="Štenci">
                                     </a>
@@ -603,6 +612,7 @@
                                 <a href="./img/gallery/ostalo/Image00007.jpg" data-fancybox="kennel-2" data-caption="Kennel">
                                     <img src="./img/gallery/ostalo/thumb/Image00007.jpg" />
                                 </a>
+                                <span class="image-caption">Kennel</span>
                                 <div class="d-none">
                                     <a href="./img/gallery/ostalo/Image00001.jpg" data-fancybox="kennel-2" data-caption="Kennel">
                                     </a>
@@ -734,7 +744,7 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header text-right">
-                                    <a href="#0" type="button" class="close" data-dismiss="modal"><i class="far fa-window-close"></i></a>
+                                    <a href="#0" type="button" class="close" data-dismiss="modal"><img src="img/close.png" alt="close"></a>
                                 </div>
                                 <div class="modal-body">
                                     <img src="./img/bj.PNG" alt="">
@@ -760,7 +770,7 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header text-right">
-                                    <a href="#0" type="button" class="close" data-dismiss="modal"><i class="far fa-window-close"></i></a>
+                                    <a href="#0" type="button" class="close" data-dismiss="modal"><img src="img/close.png" alt="close"></a>
                                 </div>
                                 <div class="modal-body">
                                     <img src="./img/bi.png" alt="">
